--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/space"
@@ -21,7 +21,11 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="@drawable/fondo"
         android:text="Iniciar Sesion"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/login_edt_password"
         app:layout_constraintStart_toStartOf="@+id/login_edt_password"
         app:layout_constraintTop_toBottomOf="@+id/login_edt_password" />
@@ -54,7 +58,7 @@
         android:id="@+id/login_txt_nombreimprenta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="TextView"
         android:textSize="24sp"
@@ -65,15 +69,13 @@
     <ImageButton
         android:id="@+id/login_btn_cargarImprenta"
         android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:background="@color/purple_500"
+        android:layout_height="30dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:minWidth="48dp"
         android:minHeight="48dp"
-        android:tint="#FAF8F8"
-        app:layout_constraintBottom_toBottomOf="@+id/login_txt_nombreimprenta"
-        app:layout_constraintStart_toEndOf="@+id/login_txt_nombreimprenta"
-        app:layout_constraintTop_toTopOf="@+id/login_txt_nombreimprenta"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_back" />
 
     <Space
