--- a/app/src/main/res/layout/item_note_tareas.xml
+++ b/app/src/main/res/layout/item_note_tareas.xml
@@ -23,7 +23,7 @@
     <LinearLayout
         android:id="@+id/layoutTareas"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="100dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="5dp"
@@ -35,20 +35,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_margin="5dp"
+                    android:layout_weight="2"
                     android:text="SERIE Y N°"
                     android:textStyle="bold" />
 
@@ -58,8 +58,9 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="TextView"
+                    android:text="1235"
                     android:textColor="#F8F5F5"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -75,8 +76,9 @@
                 <TextView
                     android:id="@+id/textView3"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_margin="5dp"
+                    android:layout_weight="2"
                     android:text="CONCEPTO"
                     android:textStyle="bold" />
 
@@ -86,6 +88,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="TextView"
                     android:textColor="#F8F5F5"
@@ -97,14 +100,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_margin="5dp"
+                    android:layout_weight="2"
                     android:text="CANTIDAD"
                     android:textStyle="bold" />
 
@@ -114,10 +118,11 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="TextView"
+                    android:text="1252"
                     android:textColor="#F8F5F5"
-                    android:textSize="16sp"
+                    android:textSize="34sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -125,14 +130,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_margin="5dp"
+                    android:layout_weight="2"
                     android:text="RESTANTE"
                     android:textStyle="bold" />
 
@@ -142,10 +148,11 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="TextView"
+                    android:text="25235"
                     android:textColor="#F8F5F5"
-                    android:textSize="16sp"
+                    android:textSize="34sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -153,14 +160,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="0.8"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textView6"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_margin="5dp"
+                    android:layout_weight="2"
                     android:text="OBSERVACIONES"
                     android:textStyle="bold" />
 
@@ -170,6 +178,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="ASDASD ASD ASD ASD ASDAS DAS DASD AAAAAAAAAAAAA"
                     android:textColor="#F8F5F5"
