--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -10,10 +10,10 @@
         android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/space"
+        app:layout_constraintTop_toBottomOf="@+id/login_txt_nombreimprenta"
         app:srcCompat="@drawable/ic_baseline_supervised_user_circle_24" />
 
     <Button
@@ -33,7 +33,7 @@
     <AutoCompleteTextView
         android:id="@+id/login_edt_login"
         android:layout_width="400dp"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -43,7 +43,7 @@
 
         android:id="@+id/login_edt_password"
         android:layout_width="400dp"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPassword"
@@ -58,24 +58,29 @@
         android:id="@+id/login_txt_nombreimprenta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:layout_marginStart="8dp"
+        android:padding="5dp"
+        android:text="NO"
+        android:textColor="@color/black"
         android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold|italic"
+        app:layout_constraintBottom_toBottomOf="@+id/textView15"
+        app:layout_constraintStart_toEndOf="@+id/textView15"
+        app:layout_constraintTop_toTopOf="@+id/textView15" />
 
     <ImageButton
         android:id="@+id/login_btn_cargarImprenta"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/fondo"
         android:minWidth="48dp"
         android:minHeight="48dp"
+        android:padding="5dp"
+        android:tint="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/textView15"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView15"
         app:srcCompat="@drawable/ic_back" />
 
     <Space
@@ -86,4 +91,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_btn_cargarImprenta" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="#009688"
+        android:padding="5dp"
+        android:text="     Imprenta seleccionada:      "
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
