--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -35,6 +35,7 @@
         android:layout_width="400dp"
         android:layout_height="70dp"
         android:layout_marginTop="8dp"
+        android:text="RUBACH"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
