--- a/app/src/main/res/layout/activity_verificacion.xml
+++ b/app/src/main/res/layout/activity_verificacion.xml
@@ -573,7 +573,7 @@
         android:text="Información"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="34sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/linearLayoutDatos"
         app:layout_constraintStart_toStartOf="parent"
@@ -589,7 +589,7 @@
         android:text="Cargar datos"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="34sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/linearLayotCargarDatos"
         app:layout_constraintHorizontal_bias="0.0"
@@ -606,9 +606,10 @@
         android:text="Verificación"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="34sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/linearLayoutVerificar"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -730,14 +731,14 @@
 
     <Button
         android:id="@+id/verificacion_btn_verpdf"
-        android:layout_width="200dp"
-        android:layout_height="48dp"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
         android:layout_marginStart="24dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/fondo"
         android:text="VER ESPECIFICACIONES"
         android:textColor="@color/white"
-        android:textSize="10sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:icon="@drawable/ic_pdf"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -745,28 +746,28 @@
 
     <Button
         android:id="@+id/verificacion_btn_guardar"
-        android:layout_width="150dp"
-        android:layout_height="48dp"
+        android:layout_width="200dp"
+        android:layout_height="70dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/fondo"
-        android:text="Guardar y validar"
+        android:text="Producción"
         android:textColor="@color/white"
-        android:textSize="10sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/verificacion_btn_cancelar"
-        android:layout_width="150dp"
-        android:layout_height="48dp"
+        android:layout_width="200dp"
+        android:layout_height="70dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/fondo"
         android:text="CANCELAR"
         android:textColor="@color/white"
-        android:textSize="10sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
