--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -19,12 +19,12 @@
     <Button
         android:id="@+id/login_btn_IniciarSesion"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/fondo"
         android:text="Iniciar Sesion"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/login_edt_password"
         app:layout_constraintStart_toStartOf="@+id/login_edt_password"
@@ -72,9 +72,9 @@
     <ImageButton
         android:id="@+id/login_btn_cargarImprenta"
         android:layout_width="80dp"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/fondo"
+        android:background="@color/teal_700"
         android:minWidth="48dp"
         android:minHeight="48dp"
         android:padding="5dp"
@@ -100,7 +100,7 @@
         android:layout_marginTop="16dp"
         android:background="#009688"
         android:padding="5dp"
-        android:text="     Imprenta seleccionada:      "
+        android:text="     Imprenta:      "
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="24sp"
